# qtile

./: .pre-commit-config.yaml  README.md  config.py  config.toml  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml  tests.yml
helper/: abstractions.py  config.py
qtilehelper/: __init__.py  screens.py
tests/: duplicate_edids_config.toml  test_abstractions.py  test_config.py
